--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
+  test: ^1.24.1
+  bloc_test: ^9.1.3
 
 dev_dependencies:
   flutter_test:
